--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ h5>a:hover{
   text-decoration: none;
 }
 
-/* h6{
+h6{
   float:right;
   font-size: calc(6px + 0.3vw);
   color: #cccccc;
@@ -66,11 +66,13 @@ h5>a:hover{
 h6>a{
   color:inherit;
   font-style:inherit;
+  text-decoration: none;
 }
 
 h6>a:hover{
   color:inherit;
-} */
+  text-decoration: none;
+}
 
 
 
