reverting ugly colors

--- a/style.css
+++ b/style.css
@@ -2,13 +2,12 @@ body{
   font-size: calc(16px + 0.3vw);
   font-family: sans-serif;
   color:black;
-  background:#f7f7f2;
 }
 
 h1{
   font-size: calc(20px + 0.3vw);
   font-family: sans-serif;
-  color:blue;
+  color:#575757;
 }
 
 div{
@@ -31,15 +30,15 @@ li{
 a{
   color: inherit;
   text-decoration:underline;
-  text-decoration-color:yellow;
+  text-decoration-color: #8ce5f5;
   z-index:-1;
 }
 
 a:hover{
 /*   color: #1fe09d; */
   text-decoration:underline;
-  text-decoration-color: red;
-  text-decoration-thickness: 3px;
+  text-decoration-color: #8ce5f5;
+  text-decoration-thickness: 2px;
 }
 
 h5{
@@ -57,8 +56,8 @@ h5>a{
 }
 
 h5>a:hover{
-  color:white;
-  background:green;
+  color:black;
+  background:#efff91;
   text-decoration: none;
 }
 
